--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="public/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="/x-icon" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/soma.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Organization Management</title>
     <link href="/src/index.css" rel="stylesheet">
